# go-board

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  pyproject.toml
include/: board.h  mcts.h  selfplay_pool.h
python/: bindings.cpp  test_goboard.py
scripts/: nchc-19x19.sbatch
src/: board.cpp  main.cpp  mcts.cpp  selfplay_pool.cpp
tests/: test_board.cpp  test_pool.cpp
train/: arena.py  batchplay.py  elo.py  gtp.py  mcts.py  net.py  play.py  selfplay.py  sgf.py  test_arena.py  test_batchplay.py  test_gtp.py  test_mcts.py  test_net.py  test_selfplay.py  test_sgf.py  test_train.py  test_tui.py  test_watch.py  train.py  tui.py  watch.py  workers.py
